@@ -3,6 +3,7 @@
 Changelog: April 23, 2012
 = Code =
 * Addressed deprecated function call to `add_custom_background`
+* Addressed deprecated function call to `get_theme_data`
 
 = Internet Browsers Reviewed =
 * Apple Safari v5.1.5
